--- a/AppWeb.Client/Routes.razor
+++ b/AppWeb.Client/Routes.razor
@@ -5,24 +5,28 @@
     <Router AppAssembly="typeof(Program).Assembly">
         <Found Context="routeData">
             @{
-                var routePath = routeData.PageType.Name;
-
-                // Use AuthorizedLayout for all pages except auth pages
-                if (routeData.PageType.Namespace?.Contains("Features.Auth") == true)
+                var isLoginPage = routeData.PageType.Name.Contains("Login");
+                
+                if (isLoginPage)
                 {
-                    // For login page, use AuthGuard to redirect already authenticated users
-                    if (routePath.Contains("Login"))
-                    {
-                        <AuthGuard RedirectAuthenticatedFromLogin="true" DashboardPath="/">
-                            <RouteView RouteData="routeData" DefaultLayout="typeof(Shared.MainLayout)" />
-                        </AuthGuard>
-                    }
-                    else
-                    { <RouteView RouteData="routeData" DefaultLayout="typeof(Shared.MainLayout)" /> }
+                    <AuthGuard RedirectAuthenticatedFromLogin="true" DashboardPath="/">
+                        <RouteView RouteData="routeData" DefaultLayout="typeof(Shared.MainLayout)" />
+                    </AuthGuard>
                 }
-                else if (routeData.PageType.Namespace?.Contains("Features.Users") == true)
-                { <RouteView RouteData="routeData" DefaultLayout="typeof(Shared.MainLayout)" /> }
-                else { <RouteView RouteData="routeData" DefaultLayout="typeof(Shared.AuthorizedLayout)" /> }
+                else
+                {
+                    <AuthorizeRouteView RouteData="@routeData" DefaultLayout="typeof(Shared.MainLayout)">
+                        <NotAuthorized>
+                            <MudContainer MaxWidth="MaxWidth.Small" Class="d-flex justify-center align-center" Style="height: 100vh;">
+                                <MudPaper Elevation="3" Class="pa-8 ma-2">
+                                    <MudText Typo="Typo.h5" Class="mb-4">Not Authorized</MudText>
+                                    <MudText>You are not authorized to access this resource.</MudText>
+                                    <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="/auth/login" Class="mt-4">Login</MudButton>
+                                </MudPaper>
+                            </MudContainer>
+                        </NotAuthorized>
+                    </AuthorizeRouteView>
+                }
             }
             <FocusOnNavigate RouteData="routeData" Selector="h1" />
         </Found>
